# portfolio

./: README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src/lib/: DropZone.svelte
src/routes/: +page.svelte
