cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "portfolio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "portfolio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true          # Compile the binary in smaller steps
rustflags = ["-Zthreads=8"] # Better compile performance

[profile.release]
codegen-units = 1                            # Allow LLVM to perform better optimization
lto = true                                   # Enable link-time-optimizations
opt-level = "s"                              # Prioritize small binary size. Use `3` if speed is preferred.
panic = "abort"                              # Higher performance by disabling panic handlers
strip = true                                 # Ensure debug symbols are removed
trim-paths = "all"                           # Remove potentially privileged information from the binaries
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"] # Better compile performance
